# choco

./: .clangd  .gitignore  CMakeLists.txt  apu.c  apu.h  cartridge.c  cartridge.h  core.c  core.h  cpu.c  cpu.h  gui_window_file_dialog.h  instructions-internal.h  instructions.c  instructions.h  main.c  main.h  nes-internal.h  nes-logging.c  nes-logging.h  nes.c  nes.h  ppu.c  ppu.h
nes/: cartridge.c  cartridge.h  core.c  core.h  nes-logging.c  nes.c  nes.h
nes/apu/: apu.c  apu.h  noise.c  noise.h  pulse.c  pulse.h  triangle.c  triangle.h
nes/cpu/: cpu.c  cpu.h  instructions.c  instructions.h
nes/mappers/: mapper.c  mapper.h
nes/mappers/impl/: nrom.c  nrom.h  uxrom.c  uxrom.h
nes/ppu/: palette.h  ppu.c  ppu.h
tests/: auto-tests.c  auto-tests.h  cpu-addressing.c  cpu-addressing.h  tests.c  tests.h
